package behavioral.observer.Game;

public interface PlayerDataListener {
    void listen(PlayerData data);
}
