@startuml

class PlayerData
{
    int thoiGian, soLuotChoi, diem

}
class Dashboard
interface PlayerDataListener
{
    + void listen(PlayerData data)
}

PlayerData ..|> PlayerDataListener
Dashboard ..|> PlayerDataListener
PlayerData --> Dashboard

note top of PlayerData
    Subject
    Các setter:
        khi cập nhật giá trị thì gọi phương thức listen của đối tượng
end note
note right of Dashboard
    Concrete Observer
end note
@enduml